--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -22,12 +22,6 @@ footer {
 
 /*Class styles*/
 
-/*
-.content {
-  height: 100vh;
-  background: linear-gradient(to bottom, rgba(87,127,161,1) 0%, rgba(55,96,133,1) 35%, rgba(255,255,255,1) 35%, rgba(255,255,255,1) 100%);
-}*/
-
 .background-div-upper {
   background-image: url('../images/bgtile.png');
   position: relative;
@@ -49,26 +43,44 @@ footer {
   background-size: contain;
 }
 
+.text-content {
+  width: 690px;
+}
+
 .phones {
   background-image: url('../images/phones.png');
   height: 580px;
   width: 454px;
-}
-
-.text-content-logo-box {
-  position: relative;
+  margin-right: 3rem;
 }
 
 .img-home {
   float: left;
-  margin-right: 1rem;
+  margin-right: 0.7rem;
 }
 
 .text-content-box {
-  width: 350px;
-  background-color: white;
   border-radius: 5px;
   padding: 0 2rem;
+  position: relative;
+  float: right;
+  background-image: url('../images/frame.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.text-content-h2,
+.text-content-h2-2nd {
+  color: #06365f;
+  margin-bottom: 0;
+}
+
+.text-content-h2-2nd {
+  margin-top: 0;
+}
+
+.text-content-p-3 {
+  margin-bottom: 2rem;
 }
 
 .figure-brand {
@@ -76,13 +88,34 @@ footer {
   margin-left: 10px;
 }
 
+.figure-android,
+.figure-appstore {
+  margin: 0;
+}
+
+.figure-android {
+  float: right;
+  margin-right: 5rem;
+}
+
+.figure-appstore {
+  float: left;
+}
+
 .button-login {
-  margin: 0 0 0 0;
   padding: 0.5rem;
   background-color: #4f789a;
   text-decoration: none;
   border: 1px solid #3d6586;
-  border-radius: 2px;
+  border-radius: 3px;
+  position: relative;
+  top: 1.5rem;
+  left: 4.4rem;
+  font-family: "Helvetica Neue";
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  box-shadow: 0px 0px 0.5px 0.5px #325d82;
 }
 
 .footer-content-container {
