--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,10 +3,28 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+html, body {
+  margin: 0px;
+  padding: 0px;
+  min-height: 100%;
+  height: 100%;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.wrapper {
+  min-height: 100%;
+  height: auto !important;
+  margin-bottom: -30px; 
+}
+
+.wrapper:after {
+  content: "";
+  display: block;
+  height: 30px;
 }
 
 .upper-blue {
@@ -76,10 +94,16 @@ body {
     margin-right: 25px;
 }
 
+
+.footer {
+  height: 30px;
+}
+
 .footer-links {
-  padding-left: 280px;
   color:#355d81;
   font-weight: bold;
+  height: 32px; 
+  margin-left: 250px;
 }
 
 .footer-links li {
@@ -87,6 +111,8 @@ body {
     list-style: none;
     float: left;
     margin-right: 35px;
+    text-transform: uppercase;
+    font-size: 14px;
 }
 
 .title {  
