--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,98 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.top {
+  background-color: #1c5380;
+  width : 100%;
+  color: blue;
+  height: 300px;
+
+}
+.brand {
+  margin-left: 45%;
+  margin-top: 150px;
+  position: relative;
+
+}
+.button {
+  width: 120px;
+  height: 50px;
+  background-color: #1c5380;
+
+  border: 2px solid
+  background-color:  #1c5380;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  position: absolute;
+  right: 210px;
+  top: 170px;
+
+}
+/*
+* {
+  border: 1px solid red;
+}
+*/
+span {
+  font-weight: bold;
+}
+
+.main_block {
+  border: 3px solid white;
+  border-radius: 3px;
+  margin-bottom: 10px;
+  position: absolute;
+  top: 260px;
+  right: 210px;
+  background-color: white;
+}
+
+.phone {
+  position: absolute;
+  float: left;
+  margin-right: 60px;
+  top: 140px;
+  left: 120px;
+}
+p{
+  margin-top: 20px;
+  display: inline-block;
+  padding-right: 80px;
+}
+.app-store {
+  margin-right: 20px;
+  float:left;
+  margin-left: 20px;
+  position: relative;
+  top: 300px;
+  left: 550px;
+}
+.google-play{
+  float: left;
+  position: relative;
+  top: 300px;
+  left: 570px;
+}
+a{
+  float: left;
+  margin-right: 20px;
+  margin-top: 80px;
+  position: relative;
+  top: 310px;
+  left:0px;
+  color: #06365f;
+}
+.copyright {
+  float: right;
+  margin-top: 40px;
+  position: relative;
+  top: 350px;
+  right: 260px;
+  color: gray;
+}
+
+h3 {
+  color: #06365f;
+}
