--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -2,9 +2,126 @@
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
-*/
+
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+*/
+
+body{
+    background-image: linear-gradient(to bottom, #1c5380, #1c5380 10%, #06365f 70%, #06365f);
+    background-size: 100% 27%;
+    background-repeat: no-repeat;
+    padding: 150px;
+}
+
+.left-side{
+  min-width:5%;
+  float: left;
+}
+
+.right-side{
+  min-width:80%;
+  padding-top:20px;
+
+}
+
+.brand{
+  float: left;
+  padding-left:50px;
+  position:relative;
+  left: 0;
+  top: 0;
+
+}
+.login-button {
+  float: left;
+  padding-left:70px;
+  padding-top: 15px;
+}
+
+.button-text {
+  vertical-align: 22%;
+  padding: 10px;
+}
+
+button{
+  color: rgba(255,255,255,0.75);
+  background-image: linear-gradient(to bottom, #1c5380, #1c5380 10%, #06365f 70%, #06365f);
+  border-radius: 4px;
+  border: 2px solid #06365f;
+  font-style: Arial;
+  font-size:14px;
+  font-weight: bold;
+  text-align: center;
+  padding: 10px 10px;
+}
+
+.content-box{
+  font-family:  Arial, sans-serif;
+  position: relative;
+  top: 20px;
+
+}
+.frame{
+  padding-left: 50px;
+}
+
+.text-header{
+  position:relative;
+  top:0px;
+  left:0px;
+  z-index: 100;
+
+  width:350px;
+  font-size: 26px;
+  font-weight:bold;
+  color: #06365f;
+  font-family:  sans-serif;
+  padding-bottom:20px;
+}
+
+.text{
+  width:375px;
+  font-size:14px;
+  font-family:  "Helvetica Neue";
+  color: rgba(0,0,0,0.8)
+
+}
+
+
+
+.banners{
+padding-top:20px;
+
+}
+
+.footer{
+  clear: both;
+  font-family: sans-serif;
+  font-size: 16px/1.5;
+  font-weight: bold;
+  text-align:center;
+  padding: 100px;
+  color: #1c5380;
+}
+
+.linked{
+
+}
+
+.unlinked{
+  color:grey;
+}
+
+.aboutUs{
+
+}
+.support{
+
+}
+.copyright{
+  color: rgb(200,200,200);
 }
