--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,65 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blue-box {
+  background: linear-gradient(#125688, #155966);
+  /*background: #155966;*/
+  width: 100%;
+  height: 350px;
+}
+
+
+.log-in {
+  position: absolute;
+  left: 960px;
+  top: 200px;
+  background: linear-gradient(#125688, #155966);
+  width: 90px;
+  height: 40px;
+  border-radius: 3px;
+  border: 3px solid #155966;
+}
+
+.adjust-log-in {
+  position: absolute;
+  top: 25%;
+  left: 5px;
+}
+
+#log-in-link {
+  left: 35px;
+}
+
+
+.phones {
+  position: absolute;
+  top: 100px;
+  left: 150px;
+}
+
+.brand {
+  position: absolute;
+  left: 605px;
+  top: 150px;
+}
+
+.frame {
+  position: absolute;
+  bottom: 200px;
+  left: 600px;
+}
+
+.frameText {
+  position: absolute;
+
+  bottom: 110px;
+  left: 635px;
+  width: 440px;
+}
+
+#nav {
+  position: absolute;
+  bottom: 10px;
+  left: 400px;
+}
