--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -12,7 +12,7 @@ body {
 
 body{
     background-image: linear-gradient(to bottom, #1c5380, #1c5380 10%, #06365f 70%, #06365f);
-    background-size: 100% 27%;
+    background-size: 100% 35%;
     background-repeat: no-repeat;
     padding: 150px;
 }
@@ -24,8 +24,10 @@ body{
 
 .right-side{
   min-width:80%;
-  padding-top:20px;
+}
 
+.up-right-side{
+  padding-top:20px;
 }
 
 .brand{
@@ -59,31 +61,38 @@ button{
   padding: 10px 10px;
 }
 
-.content-box{
+.low-right-side{
+  float:left;
   font-family:  Arial, sans-serif;
-  position: relative;
-  top: 20px;
+
 
 }
 .frame{
-  padding-left: 50px;
+  background: url("../images/frame.png") no-repeat;
+  width:500px;
+  z-index: 1000;
+  position:relative;
+  top:10px;
+  left:50px;
+
+
 }
 
 .text-header{
-  position:relative;
-  top:0px;
-  left:0px;
-  z-index: 100;
 
+  padding-top:30px;
+  padding-left:40px;
   width:350px;
   font-size: 26px;
   font-weight:bold;
+  line-height: 39px;
   color: #06365f;
   font-family:  sans-serif;
   padding-bottom:20px;
 }
 
 .text{
+  padding-left:40px;
   width:375px;
   font-size:14px;
   font-family:  "Helvetica Neue";
@@ -91,25 +100,23 @@ button{
 
 }
 
-
-
 .banners{
-padding-top:20px;
-
+  float:left;
+  padding-top:30px;
+  padding-left:90px;
 }
 
 .footer{
   clear: both;
   font-family: sans-serif;
-  font-size: 16px/1.5;
+  font-size: 12px;
   font-weight: bold;
   text-align:center;
-  padding: 100px;
+  padding: 60px;
   color: #1c5380;
 }
 
 .linked{
-
 }
 
 .unlinked{
@@ -117,11 +124,11 @@ padding-top:20px;
 }
 
 .aboutUs{
-
 }
+
 .support{
-
 }
+
 .copyright{
   color: rgb(200,200,200);
 }
