--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,124 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.bg-tile {
+  background-image: url('../images/bgtile.png');
+  height:500px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: -1;
+}
+
+.main {
+  width: 70%;
+  margin-left: 15%;
+  margin-top: 15%;
+}
+
+.left-portion {
+  width: 30%;
+  height: 500px;
+  /*background-color: red;*/
+  float: left;
+}
+
+.right-portion {
+  width: 70%;
+  height: 500px;
+  /*background-color: green;*/
+  float: left;
+}
+
+.bottom-portion {
+  clear: both;
+  width: 100%;
+  height: 100px;
+  /*background-color: blue;*/
+  margin-bottom: 200px;
+}
+
+.phones {
+  float: left;
+}
+
+.top-align {
+  vertical-align: top;
+}
+
+.frame {
+  background-image: url('../images/frame.png');
+  background-size: cover;
+  padding: 50px;
+  margin-bottom: 50px;
+}
+
+.bottom-nav {
+	width: 100%;
+	float: left;
+	margin: 0 0 3em 0;
+	padding: 0;
+	list-style: none; 
+  color: #1c5380;
+}
+.bottom-nav li {
+	float: left; 
+  list-style-type: none;
+  padding: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: smaller;
+}
+
+.bottom-nav li:last-child {
+  color: gray;
+} 
+
+.brand {
+  margin-left: 1rem;
+}
+
+.badge {
+  clear: both;
+  margin-left: 2rem;
+}
+
+.btn {
+  background: #1c5380;
+  background-image: -webkit-linear-gradient(top, #1c5380, #06365f);
+  background-image: -moz-linear-gradient(top, #1c5380, #06365f);
+  background-image: -ms-linear-gradient(top, #1c5380, #06365f);
+  background-image: -o-linear-gradient(top, #1c5380, #06365f);
+  background-image: linear-gradient(to bottom, #1c5380, #06365f);
+  -webkit-border-radius: 5;
+  -moz-border-radius: 5;
+  border-radius: 5px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  float: right;
+  margin-right: 1rem;
+}
+
+
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
+span.icon {
+    background: url(../images/home.png) no-repeat;
+    float: left;
+    width: 25px;
+    height: 22px;
+    margin-right: 1rem;
+}
