--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,103 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#top {
+  background-color: #06365f;
+  opacity: 0.85;
+  height: 300px;
+  padding: 70px 150px 0;
+}
+
+#top #phones {
+  display: block;
+  float: left;
+}
+
+#top #brand {
+  display: block;
+  float: right;
+  margin-right: 130px;
+}
+
+#top #login-button {
+  margin-top: 5px;
+  float: right;
+  display: flex;
+  width: 125px;
+  height: 40px;
+  justify-content: space-around;
+  align-items: center;
+  text-decoration: none;
+  padding: 5px;
+  color: rgba(255, 255, 255, 0.7);
+  background-color: #1c5380;
+  opacity: 1;
+  border: solid 10px #06365f;
+  font-size: 0.95em;
+}
+
+#top #login-button img {
+  height: 25px;
+}
+
+#top #content-box {
+  margin-top: 30px;
+  float: right;
+  clear: right;
+  width: 55%;
+  background-color: rgba(255, 255, 255, 1);
+  padding: 20px 40px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px -2px 13px -4px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px -2px 13px -4px rgba(0,0,0,0.75);
+  box-shadow: 0px -2px 13px -4px rgba(0,0,0,0.75);
+}
+
+#top #content-box h2 {
+  font-size: 2em;
+  color: #06365f;
+  line-height: normal;
+  margin: 0;
+}
+
+#top #content-box p {
+  font-size: 1.1em;
+  margin-bottom: 20px;
+}
+
+#top .download-badge {
+  margin: 0 20px 10px 0;
+}
+
+#bottom {
+  height: 250px;
+}
+
+footer {
+  padding: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer ul {
+  clear: both;
+  display: flex;
+  width: 45%;
+  list-style: none;
+  justify-content: space-around;
+  margin-right: 20px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: 800;
+  opacity: 0.8;
+}
+
+
+footer h4 {
+  color: lightgray;
+}
