--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -9,27 +9,48 @@ body {
   margin: 0;
 }
 
+#main-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  margin: auto;
+}
+
 #top {
   background-color: #06365f;
   opacity: 0.85;
-  height: 300px;
-  padding: 70px 150px 0;
+  height: 350px;
+  padding-top: 125px;
 }
 
 #top #phones {
   display: block;
-  float: left;
+  margin-right: 30px;
+}
+
+#top #right-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+#top #right-container #top-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 #top #brand {
   display: block;
-  float: right;
   margin-right: 130px;
 }
 
 #top #login-button {
   margin-top: 5px;
-  float: right;
   display: flex;
   width: 125px;
   height: 40px;
@@ -40,21 +61,24 @@ body {
   color: rgba(255, 255, 255, 0.7);
   background-color: #1c5380;
   opacity: 1;
-  border: solid 10px #06365f;
+  border: solid 2px midnight: ;blue;
   font-size: 0.95em;
 }
 
 #top #login-button img {
-  height: 25px;
+  height: 30px;
 }
 
 #top #content-box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
   margin-top: 30px;
-  float: right;
   clear: right;
-  width: 55%;
+  width: 90%;
   background-color: rgba(255, 255, 255, 1);
-  padding: 20px 40px;
+  padding: 30px 30px;
   border-radius: 4px;
   -webkit-box-shadow: 0px -2px 13px -4px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px -2px 13px -4px rgba(0,0,0,0.75);
@@ -73,16 +97,23 @@ body {
   margin-bottom: 20px;
 }
 
+#top #content-box #download-row {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 #top .download-badge {
-  margin: 0 20px 10px 0;
+  margin: 0 20px 0 20px;;
 }
 
 #bottom {
-  height: 250px;
+  height: 300px;
 }
 
 footer {
-  padding: 20px 0;
+  padding: 0 0 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -91,10 +122,11 @@ footer {
 footer ul {
   clear: both;
   display: flex;
+  flex-wrap: wrap;
   width: 45%;
   list-style: none;
   justify-content: space-around;
-  margin-right: 20px;
+  margin: 0 20px;
 }
 
 footer a {
