--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,73 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blueBackground{
+  background-color: #1c5380;
+  height:300px;
+  width:100%;
+  position: absolute;
+  opacity:0.8;
+  top: 0;
+  z-index: -1;
+} 
+
+.Phones{
+  margin-right: 50px;
+}
+
+.Container{
+  margin: 50px;
+  display:flex;
+  flex-direction: row;
+}
+
+header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 50px;
+}
+
+h2{
+  color:#06365f;
+}
+
+.description{
+  background-color: white;
+  border-radius:10px;
+  padding: 5px 20px 5px 20px;
+}
+
+.AppStores{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 70px 20px 70px;
+}
+
+.logIn{
+  background-color: #06365f;
+    opacity: 0.6;
+    border-radius: 5px;
+    padding: 1em 1.2em;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100px;
+    color: white;
+}
+
+footer{
+  text-align: center;
+}
+
+.Links{
+  text-decoration: none;
+  margin:5px;
+}
+
+.Copyright{
+  color:grey;
+}
