--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,89 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+    background-image: linear-gradient(to bottom, #526c9a, #526c9a 300px, #f5f5f8 20%, #f5f5f8);
+    background-size: cover;
+    background-repeat: repeat;
+    height: 1000px;
+}
+main {
+  width: 1000px;
+  margin: 100px auto;
+}
+.phone {
+  float: left;
+  vertical-align: text-top;
+}
+.logologin {
+  display: inline-block;
+  vertical-align: text-top;
+  margin: 30px 0px 20px 40px;
+}
+.logo {
+  display: inline-block;
+  vertical-align: text-top;
+}
+.home {
+  vertical-align: text-top;
+  margin-left: 70px;
+  margin-top: 15px;
+  border: 1px solid #3b517f;
+  width: 80px;
+  padding: 10px;
+  background-image: linear-gradient(to bottom, #798cb3, #526c9a);
+  display: inline-block;
+}
+.button {
+  display: inline-block;
+  color: white;
+  font-weight: bold;
+  vertical-align: middle;
+  margin: 0px;
+
+}
+.house{
+  display: inline-block;
+  vertical-align: middle;
+}
+.frame {
+  display: inline-block;
+  margin-left: 37px;
+  position: absolute;
+  z-index: 1;
+}
+.content {
+  width: 425px;
+  padding-top: 10px;
+  padding-left: 75px;
+  display: inline-block;
+  position: relative;
+  z-index: 2;
+}
+h1 {
+  line-height: 120%;
+  color: #3b517f;
+}
+.iphone{
+  display: inline-block;
+  margin-top:20px;
+}
+.android{
+  display: inline-block;
+  margin-top:20px;
+  margin-left: 20px;
+}
+.links{
+  display: inline-block;
+}
+.links p{
+  display: inline-block;
+  margin: 0 7px;
+  color: #3b517f
+}
+#copyright{
+  color: grey;
+}
+.divlinks{
+  text-align: center;
+  margin-right: 220px;
 }
