--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,86 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  z-index: 0
+}
+
+.bigOne {
+  width: 70%;
+  margin: 0 auto;
+  height: 80%;
+  position: relative;
+  z-index: 1;
+  padding-top: 120px;
+}
+
+.background-image {
+  height: 300px;
+  width: 100%;
+  position: absolute;
+}
+
+.top-images {
+  overflow: auto;
+}
+
+.phone-image {
+  float: left;
+  margin-right: 50px;
+}
+
+button {
+    background-color: #1c5380;
+    border: none;
+    color: white;
+    font-size: 12px;
+    border-radius: 2px;
+    width: 100px;
+    height: 40px;
+    float: right;
+    margin-top: 15px;
+}
+
+.home-icon {
+  height: 25px;
+  float: left;
+  padding: 5px 5px;
+}
+
+.brand-image {
+  height: 70px;
+  float: left;
+  padding-left: 10px;
+}
+
+.frame {
+  width: 480px;
+  padding-top: 20px;
+  position: absolute;
+  z-index: 2;
+  padding-right: 200px;
+}
+
+.text-box{
+  position: relative;
+  z-index:3;
+  width: 70%;
+  padding-left: 200px;
+  margin-top: 20px;
+  left: 30px;
+  top: 20px;
+}
+
+.android {
+  margin-left: 20px;
+}
+
+h1 {
+  color: #06365f;
+}
+
+footer {
+  color: #1c5380;
+  overflow:auto;
+  text-align: center;
+  word-spacing: 10px;
 }
