--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,69 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+}
+
+.topbackground {
+  background-image: url(/Users/DharmaVelasco/code/labs/lab-css-instagram-clone/starter-code/images/bgtile.png);
+  width: 100%;
+  height: 300px;
+
+}
+
+.center {
+    margin: 10px 150px;
+}
+
+
+
+.phones{
+  float: left;
+  margin: -178px 30px 10px 72px;
+}
+
+.brand {
+  float: left;
+  margin: -81px 10px 10px -13px;
+}
+.home{
+  float: left;
+  display: inline;
+  margin: -53px 10px 32px 76px;
+  width: 100px;
+}
+
+.hometext {
+      display: inline;
+      padding: 0px;
+      color: white;
+      font-family: sans-serif;
+}
+
+.content{
+  float: left;
+  width: 520px;
+  margin: -89px 10px 10px 34px;
+}
+
+h2 {
+  color: #06365f;
+  font-family: "Helvetica Neue";
+}
+
+p {
+    padding: 15px;
+}
+.frame{
+  background-image: url(/Users/DharmaVelasco/code/labs/lab-css-instagram-clone/starter-code/images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  width: 484px;
+  margin: 7px 10px 10px -16px;
+  padding: 0px 31px;
+
+}
+footer {
+  clear:left;
+  text-align: center;
 }
