--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,36 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.background-up {
+  width: 100%;
+  height: 300px;
+  background-color: #4f7998;
+}
+
+.background-down {
+  width: 100%;
+  height: 600px;
+  background-color: white;
+}
+
+.right-image {
+  width: 25%;
+  height: 500px;
+  background-color: #eec0c0;
+  float: left;
+}
+
+.info-box {
+  width: 40%;
+  height: 500px;
+  background-color: #eec0c0;
+  float: right;
+}
+
+.footer {
+  width: 100%;
+  height: 100px;
+  background-color: #f6b49e;
+  clear: both;
+}
